# perceptome

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: EIGENSPACE_EVOLUTION.md  QUICKSTART.md  SCOPE.md
examples/: recipe_cancer_attractor.ipynb  recipe_experimental_design.ipynb  tutorial.ipynb
perceptome/: __init__.py  utils.py
perceptome/catalog/: __init__.py  modules.py  validate.py
perceptome/catalog/data/: modules_v03.json
perceptome/compare/: __init__.py  conditions.py  references.py  regime.py
perceptome/drugs/: __init__.py  anchors.py  screen.py
perceptome/eigenspace/: __init__.py  project.py  rebuild.py
perceptome/eigenspace/data/: reference_v03.json
perceptome/network/: __init__.py  heterogeneity.py  network.py
perceptome/perceptivity/: __init__.py  compute.py  floor.py  reference.py
perceptome/perceptivity/data/: hpa_perceptivity_v03.json  hpa_perceptivity_v03.npz
perceptome/reference/: __init__.py  attractor.py
perceptome/reference/data/: aging_reference.json  attractor_v1.json  disease_vectors.json
perceptome/score/: __init__.py  methods.py
perceptome/validity/: __init__.py  nulls.py  scorecard.py
perceptome/validity/data/: validity_panels.json
scripts/: 01_build_catalog_v03.py  02_build_hpa_perceptivity.py  03_build_eigenspace.py  04_build_attractor_reference.py  05_compare_eigenspaces.py  06_recompute_disease_vectors.py  07_recompute_aging_reference.py  08_build_tutorial_notebook.py  09_build_eigenspace_figure.py  10_build_recipe_attractor.py  11_build_recipe_experimental_design.py
tests/: conftest.py  test_attractor.py  test_catalog.py  test_compare.py  test_drugs.py  test_eigenspace.py  test_integration.py  test_network.py  test_perceptivity.py  test_score.py  test_validity.py
